--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-.navbar-brand {
-text-emphasis: bold;
-border:blue
-} 
+
+ 
 h1  {
     color:blue;
 }
 h2 {
-    background-color: rgb(13, 110, 236);
+    background-color: rgb(93, 122, 175);
     color: white;
-    margin-left:0; margin-top:0; Margin-bottom:0;
+    text-align: center; 
+    
+    
+}
+
+image {
+    size:200px x 200px; border-radius: 8px;
 }
